button wrapping fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ li {
 li button {
       width: 350px;
       text-align: start;
+      flex-wrap: nowrap;
   }
 
   .wrong {
